# vayu-aqi-hcho

./: .gitignore  ABOUT.md  LICENSE  Makefile  README.md  environment.yml  package-lock.json  package.json  pyproject.toml  requirements.txt
app/: globals.css  layout.tsx  page.tsx
components/: ChapterNav.tsx  ChapterRail.tsx  DeckMap.tsx  Hero.tsx  IndiaField.tsx  Pipeline.tsx  Preloader.tsx  Section.tsx  SmoothScroll.tsx  ThemeToggle.tsx  sections.tsx
config/: aqi_breakpoints.yaml  config.example.yaml  datasets.yaml  regions.yaml
dashboard/: README.md  app.py
docs/: 00_overview.md  01_literature_review.md  02_data_collection.md  03_database_design.md  04_preprocessing.md  05_feature_engineering.md  06_models.md  07_training_validation.md  08_aqi_engine.md  09_aqi_mapping.md  10_hcho_hotspots.md  11_biomass_burning.md  12_hcho_ozone.md  13_transport_analysis.md  14_explainability.md  15_dashboard.md  ARCHITECTURE.md  FRONTEND_DESIGN.md  IMPLEMENTATION_REPORT.md  INGESTION_SETUP.md  REDESIGN_PLAN.md  references.md
lib/: chapters.ts  india.ts  useDrawOnEnter.ts  useReveal.ts
notebooks/: README.md
outputs/: delhi_backtrajectory.csv  demo_summary.json  demo_summary.md  hcho_hotspots_attributed.csv  real_validation.json
pipelines/: 01_ingest.py  02_preprocess.py  03_build_database.py  04_train.py  05_generate_aqi.py  06_hcho_analysis.py  07_transport.py  check_ingest.py  export_web.py  fetch_real_web.py  run_demo.py  run_real.py
tests/: test_aqi.py  test_assemble.py  test_calibrate_no2.py  test_gapfill.py  test_getis_ord.py  test_hybrid.py  test_phv.py  (+2 more)
(+60 files in other folders)
